--- a/rd-week-two-optional-assignment/css/style.css
+++ b/rd-week-two-optional-assignment/css/style.css
@@ -83,7 +83,7 @@ img{
 		overflow: auto;
 	}
 	img{
-/* 		display: inline-block; */
+		display: block;
 		width: 20%;
 /* 		margin-left: 3%;  */
 	} 
