--- a/rd-week-two-optional-assignment/css/style.css
+++ b/rd-week-two-optional-assignment/css/style.css
@@ -59,7 +59,10 @@ ol{
 }
 
 img{
-	display: none;
+/* 	display: none; */
+	display: block;
+		width: 20%;
+		margin-left: 1%;  
 }
 
 @media all and (min-width:900px){
@@ -83,9 +86,9 @@ img{
 		overflow: auto;
 	}
 	img{
-		display: block;
+/* 		display: block;
 		width: 20%;
-		margin-left: 1%; 
+		margin-left: 1%;  */
 	} 
 }
 
