--- a/rd-week-two-optional-assignment/css/style.css
+++ b/rd-week-two-optional-assignment/css/style.css
@@ -70,7 +70,7 @@ img{
 		content: ' (I guess...)';
 	}
 	header,footer{
-		background-color: transparent;
+		background-color: blue;
 	}
 	#left{
 		display: inline-block;
